--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header{
         background: #E55473;
         padding: 20px 43px;
         border: 0;
+        margin-bottom: 20px;
     }    
 
 .banner-title{
@@ -62,14 +63,10 @@ header{
 
 }
 
-main{
-    max-width: 1140px;
-    margin: 0 auto;
+/* Our featured section-style */
+.features{
+    padding-top: 100px;
 }
-main section{
-    margin-top: 130px;
-}
-/* Our featured section style */
 .section-title{
     color: #272727;
     font-size: 40px;
@@ -79,23 +76,15 @@ main section{
     font-family: lato;
     text-align: center
     
+    
 }
 .section-description{
-    /*color: #27272799;
-    font-size: 18px;
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 24px;
     font-style: normal;
     font-weight: 400;
-    text-align: center;*/
-
-    color: rgba(39, 39, 39, 0.60);
-text-align: center;
-font-family: Lato;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px;
-display: flex;
-flex-direction: column;
 }
 
 .featured-photo-container{
@@ -103,6 +92,7 @@ flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 24px;
+    margin-top: 100px;
     margin-inline: 100px;
     padding-left: 33%;
     padding-right: 33%;
@@ -155,29 +145,172 @@ flex-direction: column;
     margin-top: 5px;
     padding-bottom: 0;
 }
-/* discount section */
+
+
+/* discount section-style */
 .discount-section{
     background-color: #e5547315;
     height: 440px;
     width: ;
     margin-inline: -8px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     margin-bottom: 100px;
     padding-inline: 180px;
     margin-left: -500px;
     margin-right: -500px;
     margin-top: 200px;
+    padding-top: 100px;
+    padding-bottom: 100px;
 
 }
 .discount-img{
-    width: 300px;
-    height: 400px;
+    width: 480px;
+    height: 520px;
     margin-bottom: 0;
-    padding-top: 100px;
+    padding-top: 200px;
     padding-bottom: 100px;
     padding-right: 150px;
     margin-bottom: 0px;
     display: flex;
 }
+.discount-title{
+    color: #272727;
+    font-size: 35px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.btn{
+    color: #FFF;
+        font-size: 20px;
+        font-weight: 500;
+        border-radius: 8px;
+        background: #E55473;
+        padding: 15px 30px;
+        border: 0;
+        display: flex;
+        justify-content: center;
+        padding: 20px 43px;
+        align-items: center;
+        gap: 10px;
+        margin-left: 33%;
+}
+
+#off{
+    color: #E55473;
+}
+
+/* instagram section-style */
+.instagram-title{
+    color: #272727;
+    text-align: center;
+    font-family: Lato;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 800;
+    line-height: normal;
+}
+.insta-descrip{
+    color: rgba(39, 39, 39, 0.60);
+    text-align: center;
+    font-family: Lato;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    align-items: center;
+}
+.insta-images{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: ;
+}
+.instagram{
+    margin-bottom: 200px;
+}
+/* latest deal section-style */
+.latest-deal{
+    background-image: url('Flower Asset/background.png');
+    border-radius: 8px;
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    justify-content: center;
+    margin-left: 150px;
+    margin-right: 150px;
+    width: 1440px;
+    height: 449px;
+
+   
+}
+.text-item{
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    padding-top: 100px;
+    margin-top: 100px;
+}
+
+.container{
+    background:#FFF ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+from{
+    background: ;
+    width: px;
+    height: 55px;
+    display: flex;
+}
+form input{
+    flex: 1;
+    border:none ;
+    outline: none;
+}
+form button{
+    ba
+}
+
+
+/* bonus section style */
+
+.contact-us-section {
+    text-align: center;
+    background-color:#e5547315; 
+    text-align: center;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    }
+  
+  .contact-form {
+    max-width: 400px;
+    margin: 0 auto;
+  }
+  
+  .contact-form input,
+  .contact-form textarea {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+  
+  
+/* footer section style */
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding-block: 160px;
+    padding-inline: 400px;
+    margin-bottom: -8px;
+    margin-inline: -8px;
+
+}
+
